--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Example OptDatabase</string>
+    <string name="change_number">change number</string>
+    <string name="about">about</string>
+    <string name="update">update</string>
+    <string name="cancel">cancel</string>
+    <string name="set_number">set number</string>
+    <string name="number_text">Number:</string>
 </resources>
